--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
+html,
 body {
+  background-color: #f0f0f0;
   margin: 0;
   padding: 0;
+}
+
+@media (prefers-color-scheme: dark) {
+
+  html,
+  body {
+    background-color: #020202;
+  }
+}
+
+body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f5f5f5;
+  overflow: hidden;
 }
 
 canvas {
